templates/engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-MODELNAME-engine-service
  namespace: confighubplaceholder
  labels:
    model: MODELNAME
    app.kubernetes.io/name: serving-engine
    app.kubernetes.io/instance: vllm
    app.kubernetes.io/component: serving-engine
    app.kubernetes.io/part-of: vllm-stack
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: zmq-port
      port: 55555
      targetPort: zmq-port
      protocol: TCP
    - name: ucx-port
      port: 9999
      targetPort: ucx-port
      protocol: TCP
  selector:
    model: MODELNAME
    app.kubernetes.io/name: serving-engine
    app.kubernetes.io/instance: vllm
    app.kubernetes.io/component: serving-engine
    app.kubernetes.io/part-of: vllm-stack
