templates/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-router-service
  namespace: confighubplaceholder
  labels:
    app.kubernetes.io/name: router
    app.kubernetes.io/instance: vllm
    app.kubernetes.io/component: router
    app.kubernetes.io/part-of: vllm-stack
spec:
  type: ClusterIP
  ports:
    - name: router-sport
      port: 80
      targetPort: 8000
      protocol: TCP
    - name: lmcache-port
      port: 9000
      targetPort: lmcache-port
      protocol: TCP
  selector:
    app.kubernetes.io/name: router
    app.kubernetes.io/instance: vllm
    app.kubernetes.io/component: router
    app.kubernetes.io/part-of: vllm-stack
